<resources>
    <string name="app_name">Wave</string>
    <string name="action_logout">Log Out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="LoginBtn">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="titulo">Yep</string>
    <string name="subtitulo">Wathever</string>
    <string name="title">Wave</string>
    <string name="subtitle">It\'s never late to say Hello!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">email@gmail.com</string>
    <string name="empty_title">The following error has occurred: </string>
    <string name="user_title">Invalid user: </string>
    <string name="empty_field_message">One or more fields are empty</string>
    <string name="email_fail_message">User is already being used, also make sure your email contains a valid format</string>
    <string name="wrong_login_message">The user or password you have introduced doesn\'t matches any user, please try again </string>
    <string name="loging_message">Welcome!</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_splash_screen">Loading...</string>
    <string name="empty_inbox_label">There isn\'t any new message</string>
    <string name="empty_friends_label">Add new friends to get started</string>
    <string name="edit_friends">Edit Friends</string>
    <string name="query_error">Unable to load user database</string>
    <string name="video_size_title">Invalid video</string>
    <string name="video_size">The video\'s size isn\'t supported, please choose one under 10MB </string>
    <string name="action_add_send">Send</string>
    <string name="error_file_message">An error has occured with the selected file,please choose another file</string>
    <string name="error_file_message_title">Error, can\'t send this file</string>
    <string name="error_load_users">Error, can\'t load user list</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="user_avatar">User avatar</string>
    <string name="video_duration_error">Videos\'s duration shouldn\'t be longer than 10s</string>
    <string name="sended_message_text">Message sent</string>
    <string-array name="camera_choices">
        <item name="choice_photo">Take a picture</item>
        <item name="choice_video">Tap a video</item>
        <item name="choice_select_photo">Choose an image from gallery</item>
        <item name="choice_select_video">Choose a video from gallery</item>
    </string-array>


</resources>
