<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javierbravo.yep.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:scaleType="fitXY"
        android:src="@drawable/imag_sign_hdpi" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/title"
        android:textColor="#ff80c0"
        android:textSize="80sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle"
        android:textColor="#ff80c0"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/subtitulo"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/background_transparent_white"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameField"
            android:hint="@string/Username"
            android:textColor="#0059b3"
            android:textColorHint="#4da5ff"
            android:drawable="@drawable/appwave_edit_text_holo_light"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/Password"
            android:textColor="#0059b3"
            android:textColorHint="#4da5ff"
            android:drawable="@drawable/appwave_edit_text_holo_light"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField"
            android:hint="@string/Email"
            android:textColor="#0059b3"
            android:textColorHint="#4da5ff"
            android:drawable="@drawable/appwave_edit_text_holo_light"/>
        </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="-4.2dp"
        android:paddingLeft="-5dp"
        android:paddingRight="-5dp">

        <Button
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="-5dp"
            android:singleLine="false"
            android:text="@string/SignUp"
            android:textColor="#0059b3"
            android:textSize="20sp"
            android:textAlignment="center"
            style="@style/ButtonAppWave"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="-5dp"
            android:singleLine="false"
            android:text="@string/Cancel"
            android:textColor="#0059b3"
            android:textSize="20sp"
            android:textAlignment="center"
            style="@style/ButtonAppWave"/>

    </LinearLayout>


</RelativeLayout>



