<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fill"
    tools:context="com.javierbravo.yep.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/ola" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/subtitulo"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/UserMainField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/white"
            android:hint="User"
            android:textColor="#ffffff"
            android:textColorHint="#3676cd"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/PasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/UserMainField"
            android:layout_marginBottom="25dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#2f70cb"
            android:textSize="20dp" />

    </LinearLayout>


    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:singleLine="false"
        android:text="@string/LoginBtn"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20dp"
        android:textAlignment="center"
        style="@style/ButtonWaveTheme" />

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/SignUp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/title"
        android:textColor="#ffffff"
        android:textSize="70dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"/>

</RelativeLayout>
